[gd_scene load_steps=7 format=3 uid="uid://2maujkvq0wd7"]

[ext_resource type="Script" path="res://scenes/player_data.gd" id="1_2b3lu"]
[ext_resource type="Script" path="res://scripts/Sprite3D.gd" id="1_h08cr"]
[ext_resource type="Texture2D" uid="uid://1yo133jbbqrp" path="res://textures/gun.png" id="1_vo7o2"]
[ext_resource type="Script" path="res://scenes/player_behaviour.gd" id="2_jslil"]
[ext_resource type="PackedScene" uid="uid://wx1udfuctwse" path="res://scenes/enemy.tscn" id="4_oh1h5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_knpi0"]
size = Vector3(2.17048, 2.97698, 0.4)

[node name="level" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00942092, 0.0780801, 0)

[node name="Player" type="Node" parent="."]
script = ExtResource("1_2b3lu")

[node name="PlayerBehaviour" type="Node" parent="."]
script = ExtResource("2_jslil")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.89843)
projection = 1
fov = 74.0

[node name="Gun" type="StaticBody3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.667386, 0, 0)

[node name="Sprite3D" type="Sprite3D" parent="Gun"]
texture_filter = 0
texture = ExtResource("1_vo7o2")
script = ExtResource("1_h08cr")
target_reciever = "hit_receiver"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gun"]
transform = Transform3D(0.199776, 0, 0, 0, 0.199776, 0, 0, 0, 0.199776, -0.014729, -0.0188967, 0)
shape = SubResource("BoxShape3D_knpi0")

[node name="RayCast3D" type="RayCast3D" parent="Gun"]
transform = Transform3D(0.8, 0, 0, 0, -3.49691e-08, -0.8, 0, 0.8, -3.49691e-08, -0.00142181, 0.218388, -0.100648)
target_position = Vector3(0, -4, 0)

[node name="Enemy" parent="." instance=ExtResource("4_oh1h5")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.0226324, 0.0155646, -1.31945)

[connection signal="input_event" from="Gun" to="Gun/Sprite3D" method="_on_static_body_3d_input_event"]
[connection signal="mouse_entered" from="Gun" to="Gun/Sprite3D" method="_on_static_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="Gun" to="Gun/Sprite3D" method="_on_static_body_3d_mouse_exited"]
[connection signal="enemy_attacked" from="Enemy" to="PlayerBehaviour" method="_on_enemy_enemy_attacked"]
